[tool.poetry]
name = "asynql"
version = "0.1.0"
description = "AsyncIO GraphQL client"
authors = ["Vladimir Puzakov <vppuzakov@gmail.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.3"
mypy = "^0.701.0"
flake8 = "^3.7"
tomlkit = "^0.5.3"
sphinx = "^2.1"
m2r = "^0.2.1"
sphinx_autodoc_typehints = "^1.6"
"sphinxcontrib.mermaid" = "^0.3.1"
sphinx_typlog_theme = "^0.7.2"
pytest-html = "^1.20"
doc8 = "^0.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
