[tool.poetry]
name = "asynql"
version = "0.1.0"
description = "AsyncIO GraphQL client"
license = "GPL-3.0+"

authors = [
  "Vladimir Puzakov <vppuzakov@gmail.com>",
  "Anton Zubarev <ya.zubarevanton@yandex.ru>",
  "Yury Blagoveshchenskiy <yurathestorm@gmail.com>"
]

readme = "README.md"
repository = "https://github.com/k8s-team/asynql"
homepage = "https://asynql.readthedocs.io"

keywords = [
  "graphql",
  "graphql client",
  "asyncio"
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.701.0"
flake8 = "^3.7"

pytest = "^4.6"
pytest-html = "^1.20"
pytest-cov = "^2.7"

tomlkit = "^0.5.3"
sphinx = "^2.1"
m2r = "^0.2.1"
sphinx_autodoc_typehints = "^1.6"
"sphinxcontrib.mermaid" = "^0.3.1"
sphinx_typlog_theme = "^0.7.2"
doc8 = "^0.8.0"

safety = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
